# rihdata

./: .gitignore  Makefile  README.md  make_list.mk  pyproject.toml
data-2020/: ranked_50_2020_cbsa.csv  top_50_2020_cbsa.txt
rih/: datagen.py  explain.py  featureplot.py  linreg.py  loggingargparser.py  priceplot.py  rankscore.py  rendersite.py  shapplot.py  summary.py  topn.py  treegress.py  util.py
static-html/css/: rih.css
templates/: impact.html.j2
