[tool.poetry]
name = "raceincomehousing"
version = "0.2.1"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# The upper bound here is for the sake of tensorflow.
python = ">=3.9,<3.11"
censusdis = "^0.16.0"
xgboost = "^2.0.0"
matplotlib = "^3.6.3"
scikit-learn = "^1.2.0"
plotly = "^5.12.0"
autograd = "^1.5"
bayesian-optimization = "^1.4.2"
treeplot = "^0.1.16"
numpy = "1.26.0"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"

[tool.poetry.group.lint.dependencies]
flake8 = "^5.0.4"
black = "^23.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
